--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,13 +1,20 @@
+@import "media-queries";
 @import "form";
 @import "modal";
 @import "nav";
 @import "container";
-@import "nav";
 @import "position";
 @import "spacing";
 @import "table";
 @import "tooltip";
 @import "text";
+
+@import "components/intro";
+@import "components/contact";
+@import "components/competence";
+@import "components/footer";
+@import "components/projets";
+@import "components/share";
 
 :root {
   --font-family: "Sofia Pro", sans-serif;
