--- a/src/assets/css/components/contact.scss
+++ b/src/assets/css/components/contact.scss
@@ -2,6 +2,9 @@
   padding-top: 3rem;
   padding-bottom: 3rem;
   width: 1220px;
+  @include sm {
+    width: auto;
+  }
   margin-left: auto;
   margin-right: auto;
   .contact-title {
@@ -14,9 +17,12 @@
     h2 {
       font-style: normal;
       font-weight: 900;
-      font-size: 200px;
+      font-size: 12rem;
       line-height: 242px;
       color: rgba(255, 255, 255, 0.04);
+      @include sm {
+        font-size: 5rem;
+      }
     }
   }
   .contact-body {
