--- a/src/assets/css/components/competence.scss
+++ b/src/assets/css/components/competence.scss
@@ -5,6 +5,10 @@
   padding-bottom: 12rem;
   position: relative;
   z-index: 9;
+  @include sm {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
   .competence-body {
     max-width: 1340px;
     padding-right: 15px;
@@ -32,6 +36,9 @@
     .list {
       display: flex;
       flex-wrap: wrap;
+      @include sm {
+        padding-top: 2rem;
+      }
       span {
         max-height: 3.2rem;
         font-size: 1.3rem;
