--- a/src/assets/css/components/intro.scss
+++ b/src/assets/css/components/intro.scss
@@ -1,5 +1,8 @@
 .intro {
   height: 85vh;
+  @include sm {
+    height: 65vh;
+  }
   .intro-container {
     color: #fff;
     height: auto;
@@ -15,21 +18,22 @@
     .intro-body {
       position: relative;
       z-index: 7;
+      padding: 1rem;
     }
     .intro-color {
       width: 47rem;
-      @include sm {
-        width: auto;
-      }
       height: 47rem;
       position: absolute;
       left: 4rem;
       bottom: -23rem;
       z-index: 1;
+      @include sm {
+        width: auto;
+      }
       .color1 {
         position: absolute;
-        width: 387px;
-        height: 376px;
+        width: 287px;
+        height: 276px;
         left: 389px;
         top: 8px;
         background: radial-gradient(
@@ -38,13 +42,13 @@
           rgba(58, 58, 58, 0) 100%
         );
         @include sm {
-          width: auto;
+          left: 0;
         }
       }
       .color2 {
         position: absolute;
-        width: 434px;
-        height: 423px;
+        width: 234px;
+        height: 223px;
         left: 79px;
         top: 52px;
         background: radial-gradient(
@@ -52,14 +56,11 @@
           rgba(140, 100, 255, 0.49) 0%,
           rgba(58, 58, 58, 0) 100%
         );
-        @include sm {
-          width: auto;
-        }
       }
       .color3 {
         position: absolute;
-        width: 404px;
-        height: 413px;
+        width: 204px;
+        height: 213px;
         left: 327px;
         top: 192px;
         background: radial-gradient(
@@ -68,7 +69,7 @@
           rgba(58, 58, 58, 0) 100%
         );
         @include sm {
-          width: auto;
+          left: 0;
         }
       }
     }
