--- a/src/assets/css/_position.scss
+++ b/src/assets/css/_position.scss
@@ -2,6 +2,11 @@
   margin-bottom: 1.5rem !important;
 }
 
+.jc-center {
+  justify-content: center;
+  display: flex;
+}
+
 .ml-auto {
   margin-left: auto;
 }
