--- a/src/assets/css/_spacing.scss
+++ b/src/assets/css/_spacing.scss
@@ -149,6 +149,22 @@
     padding-bottom: 60px;
   }
 }
+.margin_130 {
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
+@media (max-width: 991px) {
+  .margin_130 {
+    padding-bottom: 110px;
+    padding-top: 110px;
+  }
+}
+@media (max-width: 575px) {
+  .margin_130 {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+}
 .margin_160_130 {
   padding-top: 160px;
   padding-bottom: 130px;
