--- a/src/assets/css/components/competence.scss
+++ b/src/assets/css/components/competence.scss
@@ -1,14 +1,7 @@
 .competence {
-  background-color: #f3f3f3;
   height: auto;
-  padding-top: 12rem;
-  padding-bottom: 12rem;
   position: relative;
   z-index: 9;
-  @include sm {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
   .competence-body {
     max-width: 1340px;
     padding-right: 15px;
@@ -16,27 +9,13 @@
     margin-right: auto;
     margin-left: auto;
     display: flex;
-    .description {
-      margin-right: 4rem;
-      h2 {
-        margin-bottom: 4rem;
-        font-size: 2.8rem;
-        font-weight: 700;
-        span {
-          background: linear-gradient(to right, #59bbf1, #8c64ff);
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-        }
-      }
-      p {
-        font-weight: 300;
-        font-size: 1.9rem;
-      }
-    }
     .list {
       display: flex;
       flex-wrap: wrap;
+      top: 11rem;
+      position: relative;
       @include sm {
+        top: 0;
         padding-top: 2rem;
       }
       span {
@@ -49,5 +28,21 @@
         margin: 0.5rem;
       }
     }
+  }
+}
+.description {
+  margin-right: 4rem;
+  h2 {
+    font-size: 2.8rem;
+    font-weight: 700;
+    span {
+      background: linear-gradient(to right, #59bbf1, #8c64ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+  p {
+    font-weight: 300;
+    font-size: 1.9rem;
   }
 }
