--- a/src/assets/css/components/competence.scss
+++ b/src/assets/css/components/competence.scss
@@ -12,7 +12,6 @@
     .list {
       display: flex;
       flex-wrap: wrap;
-      top: 11rem;
       position: relative;
       @include sm {
         top: 0;
@@ -31,7 +30,7 @@
   }
 }
 .description {
-  margin-right: 4rem;
+  // margin-right: 4rem;
   h2 {
     font-size: 2.8rem;
     font-weight: 700;
@@ -43,6 +42,6 @@
   }
   p {
     font-weight: 300;
-    font-size: 1.9rem;
+    font-size: 1.7rem;
   }
 }
